--- a/templates/content/pt-br/listavermelha.html
+++ b/templates/content/pt-br/listavermelha.html
@@ -1,6 +1,44 @@
 <div class="">
 <h3>Lista Vermelha</h3>
-<p>Dentre como atribuições fazer CNCFlora, ESTA uma de avaliar o Risco de extinção das Espécies da flora brasileira. Pará ISSO FOI Desenvolvido hum Sistema de Informação that permite uma Participação e Integração de Uma Rede de Especialistas e that armazena, organiza e Gerencia de INFORMAÇÕES Científicas necessárias Pará como avaliações de Risco de extinção de Espécies da flora.</font></font></p>
-<p>A Metodologia adotada permite uma padronização dos esforços Nacionais, assegurando rigor analyses Científico como. A Lista Vermelha Produzida Pelo CNCFlora E Dinâmica e do conforme avaliações como São realizadas OU alteradas, São inseridas no portal, havendo Uma Constante atualização. Disso de Além, que sejam considerados criterios Biológicos e utiliza o Sistema de criterios e CATEGORIAS da IUCN Pará avaliar o Risco de extinção das Espécies.</p>
-<p>Segundo a Legislação um breve los Ser Publicada, a Lista de Espécies Ameaçadas avaliadas Como de extinção NAS CATEGORIAS Vulnerável (VU), Em Perigo (EN) e Criticamente em Perigo (CR), DEVE Ser submetida anualmente Pará uma Comissão Nacional de Biodiversidade - CONABIO , com a Participação da Câmara Técnica Permanente de Espécies Ameaçadas de Extinção e de Espécies Ameaçadas de Sobreexplotadas OU Sobreexplotação. De carater Consultivo, a CONABIO delibera Sobre a Lista enviada eA encaminha AO Ministério do Meio Ambiente, that POR SUA Vez atualiza a Lista Oficial de Espécies Ameaçadas de Extinção da Flora Brasileira atraves da Publicação de Uma Instrução Normativa.</p>
-</div>
+<p>A lista vermelha consiste no produto final do trabalho executado pelo <a href="{{base_url}}/pt-br/projetos/lista-vermelha">“Projeto Lista Vermelha”</a>
+  em parceria com a rede de especialistas botânicos. Aqui
+  podem ser consultadas todas as fichas de análise e avaliação de risco de extinção para as
+  espécies que já foram avaliadas, por família.</p>
+
+  <p>Nela cada uma das espécies está classificada em uma das 8 categorias de risco de extinção,
+  estando também apresentados os critérios e subcritérios <a href="">[hyperlink para pdf com a tabela de
+  categorias e critérios]</a> utilizados durante a avaliação.</p>
+  <p>As espécies podem ser categorizadas como:</p>
+  <p>
+  <strong>“Criticamente em Perigo”</strong> <span class="category item-red-list CR"> CR</span><br/>
+  Quando as melhores evidências disponíveis indicam atender qualquer dos critérios A a E para
+  “CR”. São espécies que estão enfrentando um risco extremamente elevado de extinção na
+  natureza.</p>
+
+  <p><strong>“Em perigo”</strong> <span class="category item-red-list EN"> EN</span><br/><br/>
+  Quando as melhores evidências disponíveis indicam atender qualquer dos critérios A a E para
+  “EN”. São espécies que enfrentam um risco muito elevado de extinção na natureza.</p>
+
+  <p><strong>“Vulnerável”</strong> <span class="category item-red-list VU"> VU</span><br/>
+  Quando as melhores evidências disponíveis indicam atender qualquer dos critérios A a E para
+  “VU”. São espécies que enfrentam um risco de extinção elevado na natureza.</p>
+
+  <p><strong>“Quase ameaçada”</strong> <span class="category item-red-list NT"> NT</span><br/>
+  Espécies que no momento não se qualificam como ameaçadas, mas estão perto ou suscetíveis
+  de serem qualificadas em uma categoria de ameaça num futuro próximo.</p>
+
+  <p><strong>“Menos preocupante”</strong> <span class="category item-red-list LC"> LC</span><br/>
+  Espécies que no momento não se qualificam como ameaçadas. São incluídas nesta categoria
+  espécies abundantes e amplamente distribuídas.</p>
+
+  <p><strong>“Dados insuficientes”</strong> <span class="category item-red-list DD"> DD</span><br/>
+  Espécies que não possuem informações suficientes para sua categorização de risco de extinção
+  baseada na distribuição e/ou status populacional. Uma espécie nesta categoria pode ser bem
+  estudada, mas com deficiência de dados de abundância e/ou distribuição.</p>
+
+  <p><strong>“Extinta” </strong> <span class="category item-red-list EX"> EX</span><br/>
+  Quando não restam quaisquer dúvidas de que o último indivíduo de um táxon morreu.</p>
+
+  <p><strong>“Extinta na natureza”</strong> <span class="category item-red-list EW"> EW</span><br/>
+  Quando um táxon sobrevive apenas em cultivo, cativeiro ou apenas com uma população (ou
+  subpopulações) naturalizada fora de sua área de distribuição original.</p></div>
