--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -69,6 +69,7 @@
       <link rel="stylesheet" href="{{static_url}}/css/bootstrap.min.css" />
        <link rel="stylesheet" href="{{static_url}}/css/jquery.bxslider.css" />
       <link rel="stylesheet" href="{{static_url}}/css/site.css" />
+      <link rel="stylesheet" href="{{static_url}}/css/book.css" />
       <link rel="stylesheet" href="{{static_url}}/css/layout.css" />
       <link rel="stylesheet" href="{{static_url}}/css/style.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
