--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,20 +1,8 @@
-<!DOCTYPE HTML>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="description" content="">
-<meta name="author" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>{{assessment["taxon"]["family"]}} {{assessment["taxon"]["scientificName"]}}</title>
-<link rel="stylesheet" href="{{static_url}}/css/book.css">
-</head>
-<body>
-<div id="header">
+{% extends "layout-content.html" %}
+{% block content %}
+<!-- <article class="container"> -->
+<section class="wrapper style1 project-page view-page">
   <div class="container">
-    <p><a href="{{base_url}}/pt-br/listavermelha">Lista vermelha</a></p>
-  </div>
-</div>
-<article class="container">
   <section class='especie'>
     <div class="sixteen columns">
         <h3 class='specie'>
@@ -131,7 +119,10 @@
       </ul>
     </div>
 </section>
-</article>
+   </div>
+</section>
+
+<!-- </article> -->
 <script type="text/javascript">
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-13203805-2']);
@@ -142,5 +133,4 @@
 				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		})();
 </script>
-</body>
-</html>
+{% endblock %}
