--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1214,7 +1214,7 @@
 				margin-top: 60px !important;
 		}
 		.parceiros{
-				margin-top: 40px;
+				margin-top: 70px;
 		}
 		.parceiros li{
 				display: inline;
@@ -1723,4 +1723,11 @@ input.gsc-search-button-v2{
 
 input.gsc-search-button, input.gsc-search-button:hover, input.gsc-search-button:focus{
 	background-color: #333!important;
+}
+
+.box-contato input{
+	 padding: 10px;
+}
+.box-contato input.button{
+	 padding: 2px 10px;
 }
