--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -44,6 +44,11 @@
                 jQuery(this).addClass('active');
               }
             });
+            $('#contato').hide();
+            $('.link-contato').click(function(){
+              $('#contato').toggle(500);
+              return false;
+            });
 
             FB.init({
               appId      : '1577971729098288',
@@ -68,8 +73,8 @@
     </script>
       <link rel="stylesheet" href="{{static_url}}/css/bootstrap.min.css" />
        <link rel="stylesheet" href="{{static_url}}/css/jquery.bxslider.css" />
+       <link rel="stylesheet" href="{{static_url}}/css/book.css" />
       <link rel="stylesheet" href="{{static_url}}/css/site.css" />
-      <link rel="stylesheet" href="{{static_url}}/css/book.css" />
       <link rel="stylesheet" href="{{static_url}}/css/layout.css" />
       <link rel="stylesheet" href="{{static_url}}/css/style.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
@@ -149,34 +154,36 @@
 							<li><a href="#" class="icon ">Projetos</a></li>
 							<li><a href="{{base_url}}/pt-br/publicacoes" class="icon ">Documentos</a></li>
 							<li><a href="{{base_url}}/pt-br/equipe" class="icon ">Equipe</a></li>
-							<li><a href="#" class="icon ">Contato</a></li>
+							<li><a href="" class="icon link-contato">Contato</a></li>
           </ul>
         </div>
         </section>
-        <section class="col-sm-6 col-md-6 col-lg-6" style="display: none;">
-          <h3>Contato</h3>
-          <form>
-            <div class="row half collapse-at-2">
-              <div class="6u">
-                <input type="text" name="name" id="name" placeholder="Nome" />
+        <section id="contato" class="box-contato col-sm-6 col-md-6 col-lg-6" >
+          <div class="col-sm-10 col-md-10 col-lg-10">
+            <h3>Contato</h3>
+            <form >
+              <div class="row half collapse-at-2">
+                <div class="6u">
+                  <input type="text" name="name" id="name" placeholder="Nome" />
+                </div>
+                <div class="6u">
+                  <input type="email" name="email" id="email" placeholder="Email" />
+                </div>
               </div>
-              <div class="6u">
-                <input type="email" name="email" id="email" placeholder="Email" />
+              <div class="row half">
+                <div class=" col-sm-12 col-md-12 col-lg-12">
+                  <textarea name="message" id="message" placeholder="Mensagem" rows="5"></textarea>
+                </div>
               </div>
-            </div>
-            <div class="row half">
-              <div class=" col-sm-12 col-md-12 col-lg-12">
-                <textarea name="message" id="message" placeholder="Mensagem" rows="5"></textarea>
+              <div class="row half">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                  <ul class="actions">
+                    <li><input type="submit" class="button alt" value="Enviar Mensagem" /></li>
+                  </ul>
+                </div>
               </div>
-            </div>
-            <div class="row half">
-              <div class="col-sm-12 col-md-12 col-lg-12">
-                <ul class="actions">
-                  <li><input type="submit" class="button alt" value="Enviar Mensagem" /></li>
-                </ul>
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </section>
 
         <ul class="links parceiros col-sm-6 col-md-6 col-lg-6">
