--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -39,7 +39,8 @@
   <br/>
   <h3>Produtos</h3>
   <div class="doc">
-    <div class="img">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
       <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
         <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg"/>
     <div class="portfolio-overlay">
@@ -49,7 +50,9 @@
     </div>
     </a>
     </div>
-    <div class="img">
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
       <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
         <img src="{{static_url}}/images/projetos/lista-vermelha/Projeto Capa.jpg"/>
 
@@ -60,7 +63,9 @@
     </div>
     </a>
     </div>
-    <div class="img">
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
       <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
         <img src="{{static_url}}/images/projetos/lista-vermelha/Guia de Comentários.jpg"/>
     <div class="portfolio-overlay">
@@ -70,7 +75,9 @@
     </div>
     </a>
     </div>
-    <div class="img">
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
       <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
         <img src="{{static_url}}/images/livrovermelho.png"/>
     <div class="portfolio-overlay">
@@ -80,6 +87,7 @@
     </div>
     </a>
     </div>
+   </div>
   </div>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
