--- a/templates/content/pt-br/document/relatorios.html
+++ b/templates/content/pt-br/document/relatorios.html
@@ -1,32 +1,35 @@
 <div class="doc">
-<div class="img">
+  <div class="col-sm-3 col-md-3 col-lg-3">
+    <div class="img">
   <a href="{{static_url}}/pdf/documentos/Relatório de Campo Espinhaço Meridional - Serra do Cipó .pdf">
     <img src="{{static_url}}/images/documentos/relatorio/relatorio1.jpg"/>
 <div class="portfolio-overlay">
-    <br/>
     <p>Relatório de Campo Espinhaço Meridional - Serra do Cipó .</p>
 
 </div>
 </a>
 </div>
-<div class="img">
+</div>
+<div class="col-sm-3 col-md-3 col-lg-3">
+  <div class="img">
   <a href="{{static_url}}/pdf/documentos/Relatório Workshop de Treinamento para Análise de dados da Flora Brasileira.pdf">
     <img src="{{static_url}}/images/documentos/relatorio/relatorio2.jpg"/>
 <div class="portfolio-overlay">
-    <br/>
     <p>Relatório Workshop de Treinamento para Análise de dados da Flora Brasileira.</p>
 
 </div>
 </a>
 </div>
-<div class="img">
+</div>
+<div class="col-sm-3 col-md-3 col-lg-3">
+  <div class="img">
   <a href="{{static_url}}/pdf/documentos/Relatorio Expedicao Diamantina Final.pdf">
     <img src="{{static_url}}/images/documentos/relatorio/relatorio3.jpg"/>
 <div class="portfolio-overlay">
-    <br/>
     <p>Relatorio Expedicao Diamantina Final.</p>
 
 </div>
 </a>
+</div>
 </div>
 </div>
