--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -6,50 +6,59 @@
     <p><div class="banner-medium"><img src="{{static_url}}/images/img3.jpg" /></div>Segundo a Legislação um breve los Ser Publicada, a Lista de Espécies Ameaçadas avaliadas Como de extinção NAS CATEGORIAS Vulnerável (VU), Em Perigo (EN) e Criticamente em Perigo (CR), DEVE Ser submetida anualmente Pará uma Comissão Nacional de Biodiversidade - CONABIO , com a Participação da Câmara Técnica Permanente de Espécies Ameaçadas de Extinção e de Espécies Ameaçadas de Sobreexplotadas OU Sobreexplotação. De carater Consultivo, a CONABIO delibera Sobre a Lista enviada eA encaminha AO Ministério do Meio Ambiente, that POR SUA Vez atualiza a Lista Oficial de Espécies Ameaçadas de Extinção da Flora Brasileira atraves da Publicação de Uma Instrução Normativa.</p>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-<br/>
-<h3>Produtos</h3>
-<div class="doc">
-  <div class="img">
-    <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-      <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
-  <div class="portfolio-overlay">
-      <br/>
-      <p>Manual Operacional Avaliação de Risco de Extinção das Espécies da Flora Brasileira.</p>
+  <br/>
+  <h3>Produtos</h3>
+  <div class="doc">
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+          <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Livro Vermelho da flora do Brasil, 2014</p>
 
-  </div>
-  </a>
-  </div>
-  <div class="img">
-    <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-      <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
-  <div class="portfolio-overlay">
-      <br/>
-      <p>Manual Operacional Avaliação de Risco de Extinção das Espécies da Flora Brasileira.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+          <img src="{{static_url}}/images/projetos/lista-vermelha/Projeto Capa.jpg"/>
 
-  </div>
-  </a>
-  </div>
-  <div class="img">
-    <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-      <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
-  <div class="portfolio-overlay">
-      <br/>
-      <p>Manual Operacional Avaliação de Risco de Extinção das Espécies da Flora Brasileira.</p>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Manual Operacional Avaliação de Risco de Extinção das Espécies Raras do Cerrado</p>
 
-  </div>
-  </a>
-  </div>
-  <div class="img">
-    <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-      <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
-  <div class="portfolio-overlay">
-      <br/>
-      <p>Manual Operacional Avaliação de Risco de Extinção das Espécies da Flora Brasileira.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+          <img src="{{static_url}}/images/projetos/lista-vermelha/Guia de Comentários.jpg"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Avaliação de risco de extinção</p>
 
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="img">
+        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+          <img src="{{static_url}}/images/livrovermelho.png"/>
+          <div class="portfolio-overlay">
+            <br/>
+            <p>Livro Vermelho da flora do Brasil, 2013</p>
+
+          </div>
+        </a>
+      </div>
+    </div>
   </div>
-  </a>
-  </div>
-</div>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
 <br/>
