Adiciona filtro para busca de famílias e espécies na lista vermelha.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,11 @@
 		padding: 6px;
 		border-bottom: 1px solid #e6e6e6;
 }
+
+.search-species{
+	width: 100%;
+	margin-top: -10px;
+}
 .category{
 	color: #fff;
 	min-width: 30px;
