--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -67,7 +67,7 @@
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
       <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-        <img src="{{static_url}}/images/projetos/lista-vermelha/Guia de Comentários.jpg"/>
+        <img src="{{static_url}}/images/projetos/lista-vermelha/Guia_de_Comentarios.jpg"/>
     <div class="portfolio-overlay">
         <br/>
         <p>Avaliação de risco de extinção</p>
