--- a/templates/content/pt-br/project/plano-de-acao.html
+++ b/templates/content/pt-br/project/plano-de-acao.html
@@ -37,7 +37,7 @@
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
         <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
-          <img src="{{static_url}}/images/projetos/lista-vermelha/Guia de Comentários.jpg"/>
+          <img src="{{static_url}}/images/projetos/lista-vermelha/Guia_de_Comentarios.jpg"/>
           <div class="portfolio-overlay">
             <br/>
             <p>Avaliação de risco de extinção</p>
@@ -186,7 +186,7 @@
       </p>
   </div>
   <div class="item">
-      <img src="{{static_url}}/images/equipe/Nathália.jpg"/>
+      <img src="{{static_url}}/images/equipe/Nathalia.jpg"/>
       <p><strong>Nathália Machado </strong>
         Bióloga e doutora em Ecologia e Evolução pela Universidade Federal de
         Goiás (2014). Nathália trabalha principalmente com priorização espacial para conservação,
