--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,7 +160,7 @@
 
 .project-page .box-steps{
 	margin-bottom: 50px;
-	padding-left: 10%;
+	padding-left: 14%;
 }
 
 .project-page .box-steps .box{
@@ -178,8 +178,8 @@
 .project-page .box-steps .box-chart{
 	border-radius: 100px;
 	color: #fff;
-	height: 150px;
-	width: 150px;
+	height: 100px;
+	width: 100px;
 	text-align: center;
 	font-size: 30px;
 	z-index:2;
@@ -190,7 +190,7 @@
 .project-page .box-steps .box.active .chart-layer{
 	border-top:4px solid #20AE54;
 	width: 100%;
-	margin-top:-77px;
+	margin-top:-51px;
 	display: block;
 	z-index:0;
 }
@@ -247,18 +247,18 @@
 .project-page .box-steps .box .chart-layer{
 	border-top:4px solid #d9d9d9;
 	width: 100%;
-	margin-top:-77px;
+	margin-top:-51px;
 	display: block;
 	z-index:0;
 }
 
 .project-page .box-steps .box strong{
-	margin: 50px 0 0 0px;
+	margin: 33px 0px 0px 0px;
 	display: block;
 	position: absolute;
-	width:150px;
+	width: 100px;
 	text-align: center;
-	font-size: 20px;
+	font-size: 16px;
 }
 
 .box-section{
