--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -117,10 +117,10 @@
         <div class="layer">
         </div>
         <div class="container">
-          <!-- <h3 class="1u"><a href="index.html" class="logo-jbrj" id="logo-jbrj"><img src="images/logo-jbrj.png"/></a></h3> -->
-          <h1 class="col-sm-6 col-md-6 col-lg-6"><a target="_blank" href="http://www.jbrj.gov.br/" class="logo-jbrj-content" id="logo-jbrj"><img src="{{static_url}}/images/logo-jbrj.png"/></a><a href="{{base_url}}/" class="logo-content" id="logo"><img src="{{static_url}}/images/logo-cnc.png"/></a></h1>
+          <div class="row">
+          <h1 class="col-sm-12 col-md-6 col-lg-6"><a target="_blank" href="http://www.jbrj.gov.br/" class="logo-jbrj-content" id="logo-jbrj"><img src="{{static_url}}/images/logo-jbrj.png"/></a><a href="{{base_url}}/" class="logo-content" id="logo"><img src="{{static_url}}/images/logo-cnc.png"/></a></h1>
 
-            <div class="search-content col-md-6 col-lg6-box">
+            <div class="search-content col-sm-12 col-md-6 col-lg-6">
               <script>
                 (function() {
                  var cx = '003185954220236516085:dg88rmqobdq';
@@ -136,6 +136,7 @@
               <gcse:searchbox-only></gcse:searchbox-only>
             </div>
 
+        </div>
         </div>
       </section>
 
