--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1047,7 +1047,6 @@
     height: 100%;
 }*/
 	#banner h1{
-		position: absolute;
 		left: 0;
 		right: 0;
 		margin-top: 10px;
@@ -1730,4 +1729,15 @@ input.gsc-search-button, input.gsc-search-button:hover, input.gsc-search-button:
 }
 .box-contato input.button{
 	 padding: 2px 10px;
+}
+
+@media only screen and (max-width: 959px) and (min-width: 768px){
+	#banner.banner-content{
+		height: 10em!important;
+	}
+}
+@media only screen and (max-width: 768px){
+	#banner.banner-content{
+		height: 10em!important;
+	}
 }
