--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -92,7 +92,7 @@
               <li ><a href="{{base_url}}/" class="current">Home</a></li>
               <li><a href="{{base_url}}/pt-br/listavermelha">Lista Vermelha</a></li>
               <li>
-                <a href="{{base_url}}/pt-br/projetos" class="projects">Projetos</a>
+                <a href="{{base_url}}/pt-br/projetos" class="projects" style="padding: 10px;">Projetos</a>
                 <ul class="list-projects">
                   <li><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></li>
                   <li><a href="{{base_url}}/pt-br/projetos/plano-de-acao">Plano de ação</a></li>
