--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -9,7 +9,7 @@
   <div class="description col-sm-8 col-md-8 col-lg-8">
     <h4><a href="{{base_url}}/pt-br/projetos/lista-vermelha">LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
     <p>
-      Após o lançou do primeiro "Livro Vermelho da Flora do Brasil" em 2013, CNCFlora lançou o "Livro Vermelho - Plantas Raras do Cerrado. A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas consideradas raras na obra Plantas Raras do Brasil (Giulietti et al., 2009) e de ocorrência no domínio fitogeográfico Cerrado. O Cerrado é um dos hot spot mundial de biodiversidade, apresentando alto grau de endemismo e, por outro lado, alto grau de ameaças. Esta obra representa mais uma contribuição da comunidade científica, com a avaliação de 578 espécies para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção” do Ministério do Meio Ambiente.
+      Após o lançamento do primeiro "Livro Vermelho da Flora do Brasil" em 2013, CNCFlora lançou o "Livro Vermelho - Plantas Raras do Cerrado. A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas consideradas raras na obra Plantas Raras do Brasil (Giulietti et al., 2009) e de ocorrência no domínio fitogeográfico Cerrado. O Cerrado é um dos hot spot mundial de biodiversidade, apresentando alto grau de endemismo e, por outro lado, alto grau de ameaças. Esta obra representa mais uma contribuição da comunidade científica, com a avaliação de 578 espécies para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção” do Ministério do Meio Ambiente.
     </p>
   </div>
 </div>
