--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
         <a href="{{base_url}}/pt-br/profile/{{img['name']}}">
           <img src="{{img['img']}}"/>
           <div class="portfolio-overlay">
+            <br/>
             <h3>{{img['name']}}</h3>
             <p></p>
           </div>
@@ -76,27 +77,25 @@
       <h3 class="col-sm-12 col-md-12 col-lg-12 title "  >Destaques</h3>
     <div class="row">
 
-      <section class="col-sm-6">
+      <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="#" class="image left box-img"><img src="{{static_url}}/images/livrovermelho.png" alt="" /></a>
+          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg" alt="" /></a>
           <div class="inner">
-            <h3>The First Thing</h3>
-            <p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+            <h3><a href="{{base_url}}/pt-br/livros">Livro Vermelho - Plantas Raras do Cerrado</a></h3>
+            <p>Após o lançamento do primeiro "Livro Vermelho da Flora do Brasil" em 2013, CNCFlora lançou o "Livro Vermelho - Plantas Raras do Cerrado. A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas consideradas raras na obra Plantas Raras do Brasil (Giulietti et al., 2009) e de ocorrência no domínio fitogeográfico Cerrado.</p>
           </div>
         </div>
       </section>
-      <section class="col-sm-6 col-md-6 col-lg-6">
+      <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="#" class="image left box-img"><img src="{{static_url}}/images/img8.jpg" alt="" /></a>
+          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/livrovermelho.png" alt="" /></a>
           <div class="inner">
-            <h3>The Second Thing</h3>
-            <p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+            <h3><a href="{{base_url}}/pt-br/livros">Livro Vermelho da Flora do Brasil</a></h3>
+            <p>O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
           </div>
         </div>
       </section>
-    </div>
-    <div class="row">
-      <section class="col-sm-6 col-md-6 col-lg-6">
+      <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
           <a href="#" class="image left box-img"><img src="{{static_url}}/images/img10.jpg" alt="" /></a>
           <div class="inner">
@@ -105,7 +104,7 @@
           </div>
         </div>
       </section>
-      <section class="col-sm-6 col-md-6 col-lg-6">
+      <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
           <a href="#" class="image left box-img"><img src="{{static_url}}/images/img5.jpg" alt="" /></a>
           <div class="inner">
