--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,7 +77,7 @@
 
 }
 .category.NT{
-	 background-color:#38fa02;
+	 background-color:#779441;
 
 }
 .category.DD{
@@ -125,8 +125,7 @@
 	width:100%;
 }
 .project-page .banner-medium img{
-	max-width: 350px;
-	float: left;
+	max-width: 50%;
 	margin: 10px 10px 5px 0px;
 }
 
@@ -167,6 +166,7 @@
 	display: inline-block;
 	width: 24% !important;
 	padding: 0px;
+	margin-bottom: 20px;
 
 }
 .project-page .box-steps .box h3{
@@ -178,11 +178,12 @@
 .project-page .box-steps .box-chart{
 	border-radius: 100px;
 	color: #fff;
-	height: 100px;
-	width: 100px;
+	height: 110px;
+	width: 110px;
 	text-align: center;
 	font-size: 30px;
 	z-index:2;
+	/*border: 4px solid #66FF66;*/
 }
 .project-page .box-steps .box .title-chart-one{
 	padding-left:10px;
@@ -196,6 +197,7 @@
 }
 .project-page .box-steps .box.active .box-chart.chart{
 	background-color: #20AE54;
+	/*border: 4px solid #66FF66; */
 
 }
 .project-page .box-project{
@@ -253,12 +255,22 @@
 }
 
 .project-page .box-steps .box strong{
-	margin: 33px 0px 0px 0px;
+	margin: 30px 0px 0px 9px;
 	display: block;
 	position: absolute;
-	width: 100px;
+	width: 90px;
 	text-align: center;
 	font-size: 16px;
+	color:#666;
+}
+.project-page .box-steps .box strong.small{
+	margin: 45px 0px 0px 9px;
+}
+.project-page .box-steps .box strong.big{
+	margin: 23px 0px 0px 9px;
+}
+.project-page .box-steps  .box.active  strong{
+	color:#333;
 }
 
 .box-section{
