--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -1,39 +1,50 @@
   <h3>Lista Vermelha</h3>
   <div class="box-section col-sm-12 col-md-12 col-lg-12">
       <div class="banner-full"><img src="{{static_url}}/images/vermelha.jpg" /></div>
-      <p>Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de espécies da flora do
-      Brasil. Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, Red List Authority da
-      IUCN, cuja meta é avaliar o risco de extinção de todas as espécies da flora brasileira até o ano
-      de 2020, atendendo a meta 2 da “Estratégia Global de Conservação de Plantas” (sigla em
-      inglês GSPC) e a portaria 43.2014 do Ministério do Meio Ambiente (MMA) que institui o
-      programa Pró-espécies.<p>
+      <p>Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
+        espécies da flora do Brasil, até o ano de 2020, para atender a meta 2 da
+        “Estratégia Global de Conservação de Plantas” (GSPC -
+        http://www.cbd.int/gspc/). Listas vermelhas constituem uma ferramenta
+        importante para a priorização de investimentos na conservação de espécies e
+        também demandam muitos recursos para sua construção e atualização
+        (Rodinini et al., 2013).</p>
 
-      <p>A equipe do CNCFlora é formada por 6 profissionais formados em diferentes áreas ligadas às
-      ciências da natureza, que atuam em colaboração com uma rede de especialistas voluntários,
-      realizando recortes anuais de avaliações de risco de extinção.<p>
+      <p>Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, que conta
+        com uma equipe composta por profissionais formados em diferentes áreas
+        ligadas às ciências da natureza, e treinados no uso dos critérios e categorias
+        da União Internacional para Conservação da Natureza (IUCN -
+        http://www.iucnredlist.org/). Além destes, o projeto atua em colaboração com
+        uma rede de especialistas colaboradores, que validam as análises realizadas
+        pela equipe e contribuem para a consistência das avaliações de risco de
+        extinção.</p>
 
-      <p>O fluxo de trabalho adotado pelo Projeto consiste em três etapas básicas. A etapa de “Análise
-      de dados” que consiste na definição do recorte de avaliações e inserção de todos os dados
-      referentes à biologia das espécies, em perfis on-line criados para cada uma delas. Em seguida,
-      durante a etapa de “Validação” os dados passam pelo importante crivo da rede de
-      especialistas botânicos, neste momento, os especialistas podem inserir, excluir ou comentar
-      acerca das informações levantadas ao longo da etapa de “Análise”, através do SiSFlora, que
-      permite o acesso às informações pelos especialistas envolvidos com no recorte. Estas
-      informações são revisadas pelos analistas, que incorporam todas as alterações indicadas pelos
-      especialistas de cada família preparando os perfis das espécies para a etapa final de “Avaliação
-      de risco de extinção”.</p>
+      <p>O fluxo de trabalho adotado pela equipe, conta com um sistema de
+        informações online, desenvolvido especificamente para o processo de
+        avaliação de risco de extinção (SiSFlora) e possui três etapas básicas:</p>
 
-      <p>As avaliações de risco de extinção conduzidas pelo projeto são realizadas seguindo o sistema
-      de categorias e critérios (v. 3.1) estabelecidos pela “União Internacional para a Conservação da
-      Natureza” (sigla em inglês IUCN), amplamente utilizados e reconhecidos internacionalmente.
-      Durante essa etapa, as espécies são enquadradas em uma das 8 categorias de risco de
-      extinção (figura 1).</p>
-      <div class="banner-full"><img src="{{static_url}}/images/projetos/lista-vermelha/IUCN.jpg" /></div>
-      <p>Quando as avaliações são concluídas elas são disponibilizadas à rede de especialistas, que
-        inserem suas considerações acerca das mesmas, sendo estas novamente revisadas pelo
-        Projeto. Concluída essa etapa, as avaliações são publicadas. Todas as informações e
-        referências utilizadas pelo Projeto estão disponíveis para o acesso público ao longo de todo o
-        processo.</p>
+      <p>A etapa de “Análise de dados”, onde ocorre a compilação dos dados das
+        espécies, no perfil on-line de cada uma. São levantadas informações sobre a
+        biologia,ecologia e distribuição de cada espécie, além de dados de ameaças e
+        ações de conservação. Em seguida, durante a etapa de “Validação” os dados
+        passam pelo importante crivo da rede de especialistas colaboradores, que
+        através do SiSFlora, acessam e revisam as informações inseridas pela equipe
+        do Projeto Lista Vermelha. Feito isso, estas informações são revisadas pelos
+        analistas do Projeto Lista Vermelha, que incorporam todas as alterações
+        indicadas pelos especialistas.</p>
+
+      <p>Com o conhecimento gerado, inicia-se o processo de “Avaliação de risco de
+        extinção” das espécies, seguindo o sistema de categorias e critérios (versão
+        3.1) estabelecidos pela IUCN
+        (http://www.iucnredlist.org/documents/2001RedListCats_Crit_Portugu%C3%AA
+        s.pdf). Durante essa etapa, as espécies são categorizadas em uma das
+        categorias de risco de extinção:</p>
+      <div class="banner-medium"><img src="{{static_url}}/images/unnamed.png" /></div><br/>
+      <p>Quando as avaliações são concluídas elas são disponibilizadas novamente aos
+        especialistas colaboradores, que podem enviar críticas e sugestões a respeito
+        das avaliações realizadas. Posteriormente, as avaliações são publicadas no
+        portal (Link para parte de avaliações) e enviadas ao Ministério do Meio
+        Ambiente (MMA), responsável pela elaboração da Lista Oficial de Plantas
+        Ameaçadas do Brasil.</p>
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <br/>
@@ -92,12 +103,51 @@
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <br/>
-  <h3>Produção do Projeto</h3>
+  <h3>Fluxo de trabalho - Plantas Raras do Cerrado</h3>
 
 <section class="box-steps">
     <div class="col-sm-3 col-md-3 col-lg-3 box active">
       <div class="box-chart chart ">
-          <strong>Produção do Projeto</strong>
+          <strong>Consolidação Taxonomica</strong>
+          <div class="layer"></div>
+      </div>
+      <div class="chart-layer">
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3 box active">
+      <div class="box-chart chart">
+          <strong>Analise de Dados</strong>
+          <div class="layer"></div>
+      </div>
+      <div class="chart-layer">
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3 box active">
+      <div class="box-chart chart">
+          <strong>Validação de Dados</strong>
+          <div class="layer"></div>
+      </div>
+      <div class="chart-layer">
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3 box active">
+      <div class="box-chart chart">
+          <strong class="small">Revisão</strong>
+          <div class="layer"></div>
+      </div>
+    </div>
+    <br/><br/>
+    <div class="col-sm-3 col-md-3 col-lg-3 box active">
+      <div class="box-chart chart ">
+          <strong>Avaliação de Risco</strong>
+          <div class="layer"></div>
+      </div>
+      <div class="chart-layer">
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3 box active">
+      <div class="box-chart chart">
+          <strong class="small" >Comentários</strong>
           <div class="layer"></div>
       </div>
       <div class="chart-layer">
@@ -105,7 +155,7 @@
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3 box">
       <div class="box-chart chart">
-          <strong>Produção do Projeto</strong>
+          <strong class="big">Publicação do Livro Vermelho</strong>
           <div class="layer"></div>
       </div>
       <div class="chart-layer">
@@ -113,15 +163,7 @@
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3 box">
       <div class="box-chart chart">
-          <strong>Produção do Projeto</strong>
-          <div class="layer"></div>
-      </div>
-      <div class="chart-layer">
-      </div>
-    </div>
-    <div class="col-sm-3 col-md-3 col-lg-3 box">
-      <div class="box-chart chart">
-          <strong>Produção do Projeto</strong>
+          <strong class="big">Envio Das Avaliações ao MMA</strong>
           <div class="layer"></div>
       </div>
     </div>
