--- a/templates/layout-content.html
+++ b/templates/layout-content.html
@@ -14,7 +14,7 @@
     <script src="https://connect.facebook.net/en_US/sdk.js" type="text/javascript"></script>
 
     <script>
-          var app_token="1577971729098288|xiuRBjnx3lAelrW1wRzHmDAdb4g";
+          var app_token="CAAWbKCxg5jABABm6ZAesYiHEhGt7gc3f6oZAFZC7wKCsjgjPFujV6XApAvyZBueZBZCKvO1frrxvTnNXkbMKN06eOlw8bcwvlrTo133NK7uHuFBhM4IvxMNCKRgOZClZCHL5HjIjqXW8FD8Qs2ZAdXbyKvamwM2PgOglAdFxpqB8cTqMXvlF2EAyMZB7IMzxIM6gG1ZAeNAC2AjnQZDZD";
 
           $(document).ready(function(){
             $('.slider1').bxSlider({
