--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,8 +14,7 @@
     <script src="https://connect.facebook.net/en_US/sdk.js" type="text/javascript"></script>
 
 		<script>
-          var app_token="1577971729098288|xiuRBjnx3lAelrW1wRzHmDAdb4g";
-          app_token="CAAWbKCxg5jABAFtFreJZBoZA3mkX3ZCRdTWmNWzefJA9ugvfYz8vPx5NvWLxZCHLZC75lz0ZBtvRzJIWimdqh5QBfHWQ6fZAZAss2NtWWJ1rZCm08HG95lT9zpE7m4WNbWuAnQqjZAuJXZCZBQcQoZB1kXOQ40YFkMHNbUQkDgUlRWAZBHOZCi1OOBryBh4ZCV1MVabOx1ncZA5U0sponffsulI1jVUiX";
+          var app_token="CAAWbKCxg5jABABm6ZAesYiHEhGt7gc3f6oZAFZC7wKCsjgjPFujV6XApAvyZBueZBZCKvO1frrxvTnNXkbMKN06eOlw8bcwvlrTo133NK7uHuFBhM4IvxMNCKRgOZClZCHL5HjIjqXW8FD8Qs2ZAdXbyKvamwM2PgOglAdFxpqB8cTqMXvlF2EAyMZB7IMzxIM6gG1ZAeNAC2AjnQZDZD";
 
 					$(document).ready(function(){
 						$('.slider1').bxSlider({
