Remove imagens da pagina de projetos.

--- a/templates/content/pt-br/project/index.html
+++ b/templates/content/pt-br/project/index.html
@@ -1,31 +1,20 @@
 <h3>Projetos</h3>
 <div class="box-section box-project ">
-  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="{{base_url}}/pt-br/projetos/lista-vermelha">
-    <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg" />
-    </a>
-  </div>
 
-  <div class="description col-sm-8 col-md-8 col-lg-8">
+  <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></h4>
     <p>
-      Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de espécies da flora do
-      Brasil. Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, Red List Authority da
-      IUCN, cuja meta é avaliar o risco de extinção de todas as espécies da flora brasileira até o ano
-      de 2020, atendendo a meta 2 da “Estratégia Global de Conservação de Plantas” (sigla em
-      inglês GSPC) e a portaria 43.2014 do Ministério do Meio Ambiente (MMA) que institui o
-      programa Pró-espécies.
+        Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
+        espécies da flora do Brasil, até o ano de 2020, para atender a meta 2 da
+        <a href="http://www.cbd.int/gspc/">“Estratégia Global de Conservação de Plantas”</a>. Listas vermelhas constituem uma ferramenta
+        importante para a priorização de investimentos na conservação de espécies e
+        também demandam muitos recursos para sua construção e atualização
+        (Rodinini et al., 2013).
     </p>
   </div>
 </div>
 <div class="box-section box-project ">
-  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="{{base_url}}/pt-br/projetos/plano-de-acao">
-    <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg" />
-    </a>
-  </div>
-
-  <div class="description col-sm-8 col-md-8 col-lg-8">
+  <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/plano-de-acao">Planos de Ação</a></h4>
     <p>
       Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de espécies da flora do
@@ -38,13 +27,8 @@
   </div>
 </div>
 <div class="box-section box-project ">
-  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="{{base_url}}/pt-br/projetos/ex-situ">
-    <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg" />
-    </a>
-  </div>
 
-  <div class="description col-sm-8 col-md-8 col-lg-8">
+  <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></h4>
     <p>
       Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de espécies da flora do
@@ -57,13 +41,8 @@
   </div>
 </div>
 <div class="box-section box-project ">
-  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="{{base_url}}/pt-br/projetos/sistemas">
-    <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg" />
-    </a>
-  </div>
 
-  <div class="description col-sm-8 col-md-8 col-lg-8">
+  <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></h4>
     <p>
       Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de espécies da flora do
